    QAccessibleInterface::doAction
- QAccessibleEvent also loses the child parameter.
    QAccessibleEvent(Type type, int child) -> QAccessibleEvent(Type type)
    QAccessibleEvent::child() removed.
- QAccessibleActionInterface:
  * Refactored to be based on action names. All functions have been changed from using
    int parameters to strings.

- QSound has been moved from QtGui to QtMultimedia

- QTouchEvent:

  * The DeviceType enum and deviceType() have been deprecated due to
    the introduction of QTouchDevice.

  * The signature of the constructor has changed. It now takes a
    QTouchDevice pointer instead of just a DeviceType value.

  * TouchPointState no longer includes TouchPointStateMask and
    TouchPointPrimary. QTouchEvent::TouchPoint::isPrimary() has
    been removed.

  * QWidget *widget() has been removed and is replaced by QObject
    *target() in order to avoid QWidget dependencies.

- QMetaType

  * It is no longer possible to use Q_DECLARE_METATYPE(Foo*) where Foo is only
    forward declared - it must be fully defined.

- QWindowSystemInterface:

  * The signature of all handleTouchEvent() variants have changed,
    taking a QTouchDevice* instead of just a DeviceType value.
    Platform or generic plug-ins have to create and register at least
    one QTouchDevice before sending the first touch event.

  * The event type parameter is removed from handleTouchEvent().

- The previously exported function qt_translateRawTouchEvent() has been removed.
  Use QWindowSystemInterface::handleTouchEvent() instead.

- QAbstractEventDispatcher

  * The signature for the pure-virtual registerTimer() has changed. Subclasses
  of QAbstractEventDispatcher will need to be updated to reimplement the new
  pure-virtual 'virtual void registerTimer(int timerId, int interval,
  Qt::TimerType timerType, QObject *object) = 0;'

  * QAbstractEventDispatcher::TimerInfo is no longer a QPair<int, int>. It is