@@ -183,10 +183,6 @@ static QEvent *cloneEvent(QEvent *e)
         return new QInputMethodEvent(*static_cast<QInputMethodEvent*>(e));
     case QEvent::AccessibilityPrepare:
         return new QEvent(*e);
-#ifndef QT_NO_TABLETEVENT
-    case QEvent::TabletMove:
-        return new QTabletEvent(*static_cast<QTabletEvent*>(e));
-#endif //QT_NO_TABLETEVENT
     case QEvent::LocaleChange:
         return new QEvent(*e);
     case QEvent::LanguageChange:
@@ -196,8 +192,8 @@ static QEvent *cloneEvent(QEvent *e)
     case QEvent::Style:
         return new QEvent(*e);
 #ifndef QT_NO_TABLETEVENT
+    case QEvent::TabletMove:
     case QEvent::TabletPress:
-        return new QTabletEvent(*static_cast<QTabletEvent*>(e));
     case QEvent::TabletRelease:
         return new QTabletEvent(*static_cast<QTabletEvent*>(e));
 #endif //QT_NO_TABLETEVENT
